# d-bo

./: .gitignore  LICENSE.md  README.md  ROADMAP.md
backend/: Cargo.toml  Dockerfile  README.md  ROADMAP.md  TODO.md
backend/assets/templates/: change.email.confirm.en.html  change.email.confirm.en.txt  change.email.confirm.es.html  change.email.confirm.es.txt  change.email.warn.en.html  change.email.warn.en.txt  change.email.warn.es.html  change.email.warn.es.txt  change.password.en.html  change.password.en.txt  change.password.es.html  change.password.es.txt  change.username.en.html  change.username.en.txt  change.username.es.html  change.username.es.txt  confirmation.html  confirmation.txt  lockout.en.html  lockout.en.txt  lockout.es.html  lockout.es.txt  registration.en.html  registration.en.txt  registration.es.html  registration.es.txt
backend/documentation/: RESPONSES.md  openapi.yaml
backend/http/: player.http
backend/info/: AUTH_FAILURES.md  CHANGE_CREDENTIALS.md  COLLECTIONS.md  RULES.md
backend/src/: adapters.rs  config.rs  environment.rs  errors.rs  handlers.rs  hashing.rs  main.rs  models.rs  mongo.rs  router.rs  services.rs  validation.rs
backend/src/adapters/: email.rs  hashing.rs  jwt.rs  mongo.rs  repositories.rs
backend/src/config/: assets.rs  environment.rs
backend/src/email/: confirmation.rs
backend/src/handlers/: confirmation.rs  player.rs  player_handlers.rs  request_bodies.rs  responses.rs
backend/src/models/: game.rs  player_validation.rs  submodels.rs
backend/src/mongo/: models.rs  player.rs
backend/src/services/: types.rs  (+1 more)
(+36 files in other folders)
