[package]
name = "d-bo-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
bson = { version = "2.15.0", features = ["chrono-0_4"]}
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.18", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls", "rustls-native-certs", "ring"] }
mongodb = "3.2.5"
once_cell = "1.21.3"
rand = "0.9.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
